# DLMS.COSEM.rs

./: LICENSE  README.md
.github/workflows/: ci.yml  rust.yml
diagrams/: association.puml  association_ln_class_diagram.puml  component_diagram.puml  cosem_objects.puml  data_class_diagram.puml  security_setup_class_diagram.puml
dlms-cosem-rs/: Cargo.toml  deny.toml
dlms-cosem-rs/src/: acse.rs  activity_calendar.rs  association_ln.rs  axdr.rs  client.rs  clock.rs  cosem.rs  cosem_object.rs  data.rs  demand_register.rs  disconnect_control.rs  error.rs  extended_register.rs  hdlc.rs  hdlc_transport.rs  lib.rs  profile_generic.rs  register.rs  sap_assignment.rs  security.rs  security_setup.rs  server.rs  tcp_transport.rs  transport.rs  types.rs  wrapper_transport.rs  xdlms.rs
dlms-cosem-rs/tests/: association_ln_test.rs  callbacks_test.rs  conformance_yellow_book.rs  data_test.rs  hdlc_transport_test.rs  integration_test.rs  tcp_transport_test.rs
docs/: Doxyfile  IEC62056-6-1-Ed4_220331.docx
scripts/: generate_docs.sh
