[package]
name = "dlms-cosem-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
heapless = "0.7"
nom = { version = "7.1", default-features = false, features = ["alloc"] }
crc = "3.0.0"
linked_list_allocator = { version = "0.10.2", features = ["use_spin"] }
aes = "0.8"
hmac = "0.12"
sha2 = "0.10"
aead = "0.5"
aes-gcm = "0.10"
rand_core = { version = "0.6", features = ["getrandom"] }

[features]
default = []
std = []

[lib]
name = "dlms_cosem"
path = "src/lib.rs"
crate-type = ["staticlib", "cdylib", "lib"]

[profile.release]
panic = "abort"

[profile.dev]
panic = "abort"
