[package]
name = "dlms-cosem-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
heapless = "0.7.17"
nom = { version = "8.0.0", default-features = false, features = ["alloc"] }
crc = "3.0.0"
linked_list_allocator = { version = "0.10.2", features = ["use_spin"] }
aes = "0.8.4"
hmac = "0.12.1"
sha2 = "0.10.9"
aead = "0.5.2"
aes-gcm = "0.10.3"
rand_core = { version = "0.6.4", features = ["getrandom"] }
generic-array = "1.3.5"

[features]
default = []
std = []

[lib]
name = "dlms_cosem"
path = "src/lib.rs"
crate-type = ["staticlib", "cdylib", "lib"]

[profile.release]
panic = "abort"

[profile.dev]
panic = "abort"
