[package]
name = "dlms-cosem-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
nom = { version = "8.0.0", default-features = false, features = ["alloc"] }
crc = { version = "3.0.0", default-features = false }
linked_list_allocator = { version = "0.10.2", default-features = false, features = ["use_spin"] }
aes = { version = "0.8.4", default-features = false }
hmac = { version = "0.12.1", default-features = false }
sha2 = { version = "0.10.9", default-features = false }
aead = { version = "0.5.2", default-features = false, features = ["alloc", "getrandom"] }
aes-gcm = { version = "0.10.3", default-features = false, features = ["alloc", "aes"] }
rand_core = { version = "0.6.4", default-features = false, features = ["getrandom"] }
generic-array = "1.3.5"

[features]
default = []
std = [
    "nom/std",
    "hmac/std",
    "sha2/std",
    "aes-gcm/std",
    "rand_core/std"
]

[lib]
name = "dlms_cosem"
path = "src/lib.rs"
crate-type = ["staticlib", "cdylib", "lib"]

[profile.release]
panic = "abort"

[profile.dev]
panic = "abort"

[[test]]
name = "association_ln_test"
path = "tests/association_ln_test.rs"
required-features = ["std"]

[[test]]
name = "conformance_yellow_book"
path = "tests/conformance_yellow_book.rs"
required-features = ["std"]

[[test]]
name = "data_test"
path = "tests/data_test.rs"
required-features = ["std"]

[[test]]
name = "integration_test"
path = "tests/integration_test.rs"
required-features = ["std"]
